--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^1.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
